# yodalist

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  tests.py  yodalist.py
src/yodalist/: __init__.py
src/yodalist.egg-info/: PKG-INFO  SOURCES.txt
