[metadata]
name         = yodalist
author       = lynn pepin
author_email = @lynndotpy@mastodon.social
version      = 0.1.0
description  = For lists, yoda-indexing this package provides. (A package for fun)
long_description = file: README.md
long_description_content_type = text/markdown 
url         = https://gitlab.com/lynnpepin/yodalist
license     = see repository

classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Other Audience
    Progamming Language :: Python :: 3
    License :: Free To Use But Restricted
    Operating System :: OS Independent
    Topic :: Utilities

[options]
package_dir =
    = src

